# fmu-hackatom-3

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app/application/: README.md  route_guard.py
app/application/services/: user_account_service.py  user_service.py
app/application/utils/: data_validation.py
app/domain/dtos/: login_dto.py
app/domain/entities/: user_account_entity.py  user_entity.py
app/infrastructure/mongodb/: mongo.py
app/infrastructure/mongodb/repositories/: user_account_repository.py  user_repository.py
docs/: INFRA_BANCO.drawio
static/js/: login_ajax.js
templates/: index.html
templates/home/: home.html
templates/login/: login.html
templates/partials/: input-text.html  input.html  navbar.html
